grammar.js
    script: $ => repeat(choice(
      $.import_declaration,
      $.enum_declaration,
      $.typedef_declaration,
      $.class_declaration,
      $.mixin_declaration,
      $.interface_declaration,
      $.funcdef_declaration,
      $.virtual_property,
      $.variable_declaration,
      $.func_declaration,
      $.namespace_declaration,
      $.using_declaration,
      ";",
    )),

    // =========================================================================
    // IMPORT
    // =========================================================================
    import_declaration: $ => seq(
      "import",
      field("return_type", $.type),
      optional("&"),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      optional($.func_attributes),
      "from",
      field("source", $.string_literal),
      ";",
    ),

    // =========================================================================
    // USING
    // =========================================================================
    using_declaration: $ => seq(
      "using",
      "namespace",
      field("name", $.scoped_identifier),
      ";",
    ),

    // Plain identifier or scope-qualified: foo, ::foo, NS::foo, NS::T<int>::foo
    // Flat repeat: avoids early scope reduction on multi-level chains (A::B::c)
    scoped_identifier: $ => seq(
      optional("::"),
      $.identifier,
      repeat(seq("::", $.identifier, optional($.template_type_list))),
    ),

    // =========================================================================
    // NAMESPACE
    // =========================================================================
    namespace_declaration: $ => seq(
      "namespace",
      field("name", $.scoped_identifier),
      field("body", $.namespace_body),
    ),

    namespace_body: $ => seq(
      "{",
      repeat(choice(
        $.import_declaration,
        $.enum_declaration,
        $.typedef_declaration,
        $.class_declaration,
        $.mixin_declaration,
        $.interface_declaration,
        $.funcdef_declaration,
        $.virtual_property,
        $.variable_declaration,
        $.func_declaration,
        $.namespace_declaration,
        $.using_declaration,
        ";",
      )),
      "}",
    ),

    // =========================================================================
    // ENUM
    // =========================================================================
    enum_declaration: $ => seq(
      repeat(field("modifier", $.shared_external_modifier)),
      "enum",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          // scoped enum with explicit underlying type (AS 2.31+)
          optional(seq(":", field("underlying_type", choice($.primitive_type, $.identifier)))),
          "{",
          commaSep($.enum_member),
          optional(","),
          "}",
        ),
      ),
    ),

    enum_member: $ => seq(
      field("name", $.identifier),
      optional(seq("=", field("value", $._expression))),
    ),

    // =========================================================================
    // TYPEDEF
    // =========================================================================
    typedef_declaration: $ => seq(
      "typedef",
      field("base_type", $.primitive_type),
      field("name", $.identifier),
      ";",
    ),

    // =========================================================================
    // CLASS
    // =========================================================================
    class_declaration: $ => seq(
      repeat(field("modifier", $.declaration_modifier)),
      "class",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          optional($.base_class_list),
          field("body", $.class_body),
        ),
      ),
    ),

    base_class_list: $ => seq(
      ":",
      commaSep1(field("base", $.scoped_identifier)),
    ),

    class_body: $ => seq(
      "{",
      repeat(choice(
        $.virtual_property,
        $.func_declaration,
        $.variable_declaration,
        $.funcdef_declaration,
        // stray ';' after a member (e.g. `void Foo() {};`) is tolerated by
        // the real compiler, same as at script scope.
        ";",
      )),
      "}",
    ),

    // =========================================================================
    // MIXIN
    // =========================================================================
    mixin_declaration: $ => seq(
      "mixin",
      repeat(field("modifier", $.declaration_modifier)),
      "class",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          optional($.base_class_list),
          field("body", $.class_body),
        ),
      ),
    ),

    // =========================================================================
    // INTERFACE
    // =========================================================================
    interface_declaration: $ => seq(
      repeat(field("modifier", $.shared_external_modifier)),
      "interface",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          optional($.base_class_list),
          field("body", $.interface_body),
        ),
      ),
    ),

    interface_body: $ => seq(
      "{",
      repeat(choice(
        $.virtual_property,
        $.interface_method,
      )),
      "}",
    ),

    interface_method: $ => seq(
      field("return_type", $.type),
      optional("&"),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      optional("const"),
      ";",
    ),

    // =========================================================================
    // FUNCDEF
    // =========================================================================
    funcdef_declaration: $ => seq(
      repeat(field("modifier", $.shared_external_modifier)),
      "funcdef",
      field("return_type", $.type),
      optional("&"),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      ";",
    ),

    // =========================================================================
    // FUNC
    // =========================================================================
    func_declaration: $ => prec.dynamic(2, seq(
      repeat(field("modifier", $.shared_external_modifier)),
      optional(choice("private", "protected")),
      optional(
        choice(
          seq(field("return_type", $.type), optional("&")),
          "~",
        ),
      ),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      optional("const"),
      optional($.func_attributes),
      choice(";", field("body", $.statement_block)),
    )),

    declaration_modifier: _ => choice("shared", "external", "abstract", "final"),

    // Strict subset for declarations that don't support 'abstract'/'final'
    // (funcdef, enum) per the AngelScript BNF.
    shared_external_modifier: _ => choice("shared", "external"),

    // =========================================================================
    // VIRTUAL PROPERTY
    // =========================================================================
    virtual_property: $ => prec.dynamic(3, seq(
      optional(choice("private", "protected")),
      field("prop_type", $.type),
      optional("&"),
      field("name", $.identifier),
      "{",
      repeat($.accessor),
      "}",
    )),

    accessor: $ => seq(
      field("kind", choice("get", "set")),
      optional("const"),
      optional($.func_attributes),
      choice(";", field("body", $.statement_block)),
    ),

    // =========================================================================
    // VAR — supports multiple declarators: int a = 1, b = 2, c;
    // =========================================================================
    variable_declaration: $ => prec.dynamic(1, seq(
      optional(choice("private", "protected")),
      field("var_type", $.type),
      $.variable_declarator,
      repeat(seq(",", $.variable_declarator)),
      ";",
    )),

    variable_declarator: $ => seq(
      field("name", $.identifier),
      optional(choice(
        seq("=", choice($.initializer_list, $._expression)),
        $.argument_list,
      )),
    ),

    // =========================================================================
    // STATEMENT BLOCK (stub — expanded in Step 3)
    // =========================================================================
    statement_block: $ => seq(
      "{",
      repeat(choice(
        $.variable_declaration,
        $._statement,
        $.using_declaration,
      )),
      "}",
    ),

    _statement: $ => choice(
      $.if_statement,
      $.for_statement,
      $.foreach_statement,
      $.while_statement,
      $.do_while_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.try_statement,
      $.statement_block,
      $.expression_statement,
      ";",
    ),

    expression_statement: $ => seq(
      $._expression,
      ";",
    ),

    if_statement: $ => prec.right(seq(
      "if", "(", $._expression, ")",
      field("consequence", $._statement),
      optional(seq("else", field("alternative", $._statement))),
    )),

    parameter_list: $ => seq(
      "(",
      optional(commaSep1($.parameter)),
      ")",
    ),

    parameter: $ => seq(
      field("param_type", $.type),
      optional(seq("&", optional(choice("in", "out", "inout")))),
      choice(
        "...",
        seq(
          optional(field("name", $.identifier)),
          optional(seq("=", field("default_value", choice("void", $._expression)))),
        ),
      ),
    ),

    // =========================================================================
    // TYPE SYSTEM
    // =========================================================================
    type: $ => seq(
      optional("const"),
      optional($.scope),
      $.datatype,
      optional($.template_type_list),
      repeat(choice(
        seq("[", "]"),
        seq("@", optional("const")),
      )),
    ),

    template_type_list: $ => seq(
      $._template_open,
      $.type,
      repeat(seq(",", $.type)),
      $._template_close,
    ),

    // Scope chain for types: :: | ::? NS:: | ::? NS::T<int>::NS2:: ...
    // Reuses scoped_identifier shape (flat greedy) + trailing '::'
    scope: $ => choice(
      "::",
      seq($.scoped_identifier, "::"),
    ),

    datatype: $ => choice(
      $.identifier,
      $.primitive_type,
      "?",
      "auto",
    ),

    // =========================================================================
    // EXPRESSIONS — Full system with correct operator precedence
    //
    // Precedence table (low to high), per doc_script_precedence.md.
    // Note this deliberately differs from C: bitwise &|^ bind TIGHTER than
    // comparison/equality (avoids C's `a & b == c` gotcha), and xor/^^
    // shares a tier with equality/identity rather than sitting between
    // or and and.
    //   1  = += -= *= /= %= **= |= &= ^= <<= >>= >>>=  (right)
    //   2  ?: ternary                                     (right)
    //   3  || or                                          (left)
    //   4  && and                                         (left)
    //   5  == != is !is xor ^^                             (left)
    //   6  < <= > >=                                      (left)
    //   7  | (bitwise OR)                                 (left)
    //   8  ^ (bitwise XOR)                                (left)
    //   9  & (bitwise AND)                                (left)
    //  10  << >> >>>                                      (left)
    //  11  + - (binary)                                   (left)
    //  12  * / %                                          (left)
    //  13  ** (exponent)                                  (right)
    //  15  unary prefix: - + ! not ~ @ ++ --               (right)
    //  16  postfix: .member [index] () ++ --              (left)
    // =========================================================================
    _expression: $ => choice(
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.functional_cast_expression,
      $.cast_expression,
      $.construct_call_expression,
      $.lambda_expression,
      $.parenthesized_expression,
      $.number_literal,
      $.concatenated_string,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.this_expression,
      $.scoped_identifier,
    ),

    assignment_expression: $ => prec.right(1, seq(
      field("left", $._expression),
      field("operator", choice(
        "=", "+=", "-=", "*=", "/=", "%=", "**=",
        "&=", "|=", "^=", "<<=", ">>=", ">>>=", "@=",
      )),
      // RHS may be brace init list: dict = {{'a', 1}}
      field("right", choice($.initializer_list, $._expression)),
    )),

    // --- Ternary (prec 2, right-associative) ---
    binary_expression: $ => {
      const table = [
        // prec 3: logical OR
        ["||", 3],
        ["or", 3],
        // prec 4: logical AND
        ["&&", 4],
        ["and", 4],
        // prec 5: equality / identity / logical XOR (same tier in AngelScript)
        ["==", 5],
        ["!=", 5],
        ["is", 5],
        ["!is", 5],
        ["^^", 5],
        ["xor", 5],
        // prec 6: relational
        ["<", 6],
        [">", 6],
        ["<=", 6],
        [">=", 6],
        // prec 7: bitwise OR
        ["|", 7],
        // prec 8: bitwise XOR
        ["^", 8],
        // prec 9: bitwise AND
        ["&", 9],
        // prec 10: shift
        ["<<", 10],
        [">>", 10],
        [">>>", 10],
        // prec 11: additive
        ["+", 11],
        ["-", 11],
        // prec 12: multiplicative
        ["*", 12],
        ["/", 12],
        ["%", 12],
      ];

      return choice(
        ...table.map(([op, precedence]) =>
          prec.left(precedence, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          )),
        ),
        // prec 13: exponentiation (right-associative)
        prec.right(13, seq(
          field("left", $._expression),
          field("operator", "**"),
          field("right", $._expression),
        )),
      );
    },

    // --- Unary prefix (prec 15, right-associative) ---
    // Includes @ (handle-of operator). 'not' is the keyword form of '!'.
    _initializer_element: $ => choice(
      $.initializer_list,
      $.typed_initializer_list,
      $._expression,
    ),

    initializer_list: $ => seq(
      "{",
      commaSep($._initializer_element),
      optional(","),
      "}",
    ),

    // Anonymous typed list construction used as a value, e.g. a dictionary
    // entry: {"key", array<string> = {"a", "b"}}
    argument_list: $ => seq(
      "(",
      commaSep(seq(
        optional(seq(field("arg_name", $.identifier), ":")),
        // 'void' argument: func(void) — ignores an output value
        choice($.initializer_list, $.typed_initializer_list, "void", $._expression),
      )),
      ")",
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================
    null_literal: _ => "null",

    string_literal: _ => token(choice(
      // Triple-quoted heredoc strings (no escape processing, multiline)
      seq('"""', /([^"]|"[^"]|""[^"])*/, '"""'),
      // Single and double quoted strings with escape sequences
      seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
    )),

    primitive_type: _ => choice(
      "void", "int", "int8", "int16", "int32", "int64", "uint",
      "uint8", "uint16", "uint32", "uint64", "float", "double", "bool",
    ),
